- Implemented: I2C for non arm systems
- Implemented: InfluxDB Data push
- Implemented: Latvian Language support (big thanks to Edgars)
- Implemented: Netatmo Home Coach support
- Implemented: Notification for Dummy Soil/Moisture sensor
- Implemented: Notification for Alert Sensor via udevice JSON call
- Implemented: Option to replace an Meter device
- Implemented: Python Plugin System
- Implemented: RFXtrx Lucci Fan implemented
- Implemented: RFXtrx RFY2 protocol implemented
- Implemented: RFXtrx Kangtai / Cotech implemented
- Implemented: SolarEdgeAPI, support for multiple inverters
- Implemented: Support for Ble Box hardware
- Implemented: Support for different usage/return costs for electricity
- Implemented: Support for Intergas InComfort LAN2RF Gateway
- Implemented: Support for Open Weather Map
- Implemented: Support for Open Web Net
- Implemented: Support for XiaomiGateway Gateway
- Implemented: Support for YeeLight
- Implemented: Support for Youless LS120
- Implemented: Switch type 'Door Lock'
- Implemented: Timer Plan editor
- Implemented: Teleinfo : Added a switch indicating the current cost slot
- Removed: Razberry ZWave handling method. Existing users need to migrate to OpenZWave

Version 3.5878 (November 10th 2016)
- Fixes and various improvements

Version 3.5837 (October 30th 2016)
- Fixed: Blockly/Lua, FOR and RANDOM are now again in minutes
- Changed: Shortlog charts for Temperature, Current and Smartlog are now using a spline
- Changed: Lua/Blockly, Notifications are now not blocking

Version 3.5834 (October 29th 2016)
- Implemented: TSL2561 illuminance I2C sensor (ldrolez)
- Implemented: AccuWeather support
- Implemented: Air Quality graph, Avarage and Previous month/year
- Implemented: Atag One Thermostat support
- Implemented: Blockly/Lua Camera device, to send camera snapshots with subject after xx seconds
- Implemented: Blockly upgraded to latest version (fixed and cleaned some code as well), this fixes problem with long sensor lists